# UAO-Neumonia

./: .gitignore  detector_neumonia.py  historial.csv  pyproject.toml
servicio/: grad_cam.py  integrator.py  load_model.py  preprocess_img.py  read_img.py
src/uao_neumonia/core/: integrator.py
src/uao_neumonia/core/io/: read_img.py
src/uao_neumonia/core/ml/: grad_cam.py  load_model.py  preprocess_img.py
src/uao_neumonia/ui/: detector_neumonia.py
src/uao_neumonia/utils/: paths.py
